Feat: 스웨거에 자동완성 추가
