# routes/v1/searchRouter.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const searchController = require('../../controllers/searchController');
 
-router.get('/auto', searchController.keywordAutoCompletion);
+router.get('/auto-complete', searchController.keywordAutoCompletion);
 router.get('/admin', searchController.searchForAdmin);
 router.get('/', searchController.searchByKeyword);
 
